# python-monorepo

./: README.md  pyproject.toml
python_monorepo/common/: pyproject.toml
python_monorepo/service1/: pyproject.toml
python_monorepo/service2/: pyproject.toml
