[tool.poetry]
name = "python-monorepo"
version = "0.1.0"
description = "Python monorepo with poetry"
authors = ["Ezequiel Ahumada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "python_monorepo/common/", develop = true }
service1 = { path = "python_monorepo/service1/", develop = true }
# Adding service2 will fail due to incompatible dependencies, 
# This approach helps us enforce dependencies effectively
# service2 = { path = "python_monorepo/service2/", develop = true }

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
