[tool.poetry]
name = "common"
version = "0.1.0"
description = "Python monorepo with poetry"
authors = ["Ezequiel Ahumada"]

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "2.5.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
