[tool.poetry]
name = "service2"
version = "0.1.0"
description = "Python monorepo with poetry"
authors = ["Ezequiel Ahumada"]

[tool.poetry.dependencies]
python = "^3.10"
s3fs = "^2023.12.1"
aiobotocore = "^2.8.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
